Login and signup functionality

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Dank Book</title>
+    <!--Responsive tag-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="shortcut icon" href="/favicon.ico">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <!-- Icons -->
